Start. Fix overlapping of words and buttons on small screens

--- a/widgets/start-session-and-quiz/edx/default/dev/start-session-and-quiz-style.css
+++ b/widgets/start-session-and-quiz/edx/default/dev/start-session-and-quiz-style.css
@@ -200,7 +200,7 @@
 }
 
 .quiz__question-prompt {
-  margin: 17px auto 27px auto;
+  margin: 15px auto 15px auto;
   font-size: 1.5em;
   color: rgba(255, 255, 255, 0.8);
   font-weight: 700;
@@ -208,7 +208,7 @@
   letter-spacing: 1px;
   text-align: center;
   height: 12%;
-  padding: 2%;
+  padding: 1%;
 }
 
 .quiz__quiz-container--hidden {
@@ -244,7 +244,7 @@
 }
 
 .quiz__question {
-  margin: 30px 10px 0 10px;
+  margin: auto auto 0 auto;
   font-size: 2.2em;
   color: rgb(54, 92, 170);
   font-weight: 700;
